--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.5.0/p5.js"></script>
     <link rel='stylesheet' href='https://unpkg.com/aos@2.3.0/dist/aos.css'>
+
+
+    <script src="./mobile.js"></script>
+    <script>
+        SA.redirection_mobile({
+            mobile_url: "www.cs.middlebury.edu/~kewing/digital_studio/mobile.html",
+            mobile_prefix: "https"
+        });
+    </script>
+
 </head>
 
 
@@ -255,33 +265,34 @@
         <p>
             Inspired by the work of Sol Lewitt we cerated a square composition following a set of rule. The dimensions of the illustrator file were 1920px X 1080px, RGB color space, 300dpi. The initial square was 900px X 900px . All should occur in the square unless specified.
         </p>
-        <div class="colcontainer">
-            <div class="column1">
-                1) Color one square gold.<br/>
-                2) Color one half square blue. <br/>
-                3) Color one half square orange.<br/>
-                4) Make a gradient section.<br/>
-                5) Make a striped square. <br/>
-                6) Make a fat stroke square.<br/>
-                7) Make a skinny stroke square. <br/>
-                8) Make pattern in one section. <br/>
-                9) Color a quarter square with a dark color. <br/>
-                10) Color a quarter square with a light color. <br/>
-                11) Color an orange triangle. <br/>
-                12) Make two sections that intersect. <br/>
-                13) Make a section that is red and yellow striped. <br/>
-                14) Outline a section with black. <br/>
-                15) Outline a section with red. <br/>
-                16) Mirror a section. <br/>
-                17) Make another patterned section.<br/>
-                18) Make one element that breaks the border of the square.<br/>
-                19) Make one square that has a Blending Mode other than Normal.
-            </div>
-            <div class="column2">
-                <img src="./images/ewing-k_instruction_art.jpg" style="width:100%; margin:auto;">
+        <div class ="fullspan">
+            <div class="colcontainer">
+                <div class="column1">
+                    1) Color one square gold.<br/>
+                    2) Color one half square blue. <br/>
+                    3) Color one half square orange.<br/>
+                    4) Make a gradient section.<br/>
+                    5) Make a striped square. <br/>
+                    6) Make a fat stroke square.<br/>
+                    7) Make a skinny stroke square. <br/>
+                    8) Make pattern in one section. <br/>
+                    9) Color a quarter square with a dark color. <br/>
+                    10) Color a quarter square with a light color. <br/>
+                    11) Color an orange triangle. <br/>
+                    12) Make two sections that intersect. <br/>
+                    13) Make a section that is red and yellow striped. <br/>
+                    14) Outline a section with black. <br/>
+                    15) Outline a section with red. <br/>
+                    16) Mirror a section. <br/>
+                    17) Make another patterned section.<br/>
+                    18) Make one element that breaks the border of the square.<br/>
+                    19) Make one square that has a Blending Mode other than Normal.
+                </div>
+                <div class="column2">
+                    <img src="./images/ewing-k_instruction_art.jpg" style="width:100%; margin:auto;">
+                </div>
             </div>
         </div>
-
         <h2 id="botanical">
             Botanical Illustrations
         </h2>
