--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <script src="./mobile.js"></script>
     <script>
         SA.redirection_mobile({
-            mobile_url: "www.cs.middlebury.edu/~kewing/digital_studio/mobile.html",
+            mobile_url: "www.cs.middlebury.edu/~kewing/digital_studio/mobile",
             mobile_prefix: "https"
         });
     </script>
@@ -34,20 +34,20 @@
     </div>
     <div id="navbar">
         <div style="padding-left: 100px;" id = "buttons">
-            <a href="#class">Class</a>
-            <a href="#principles">Principles</a>
-            <a href="#color">Color</a>
-            <a href="#gradient">Gradients</a>
-            <a href="#type">Type</a>
-            <a href="#collage">Collage</a>
-            <a href="#sollewitt">Sol Lewitt</a>
-            <a href="#botanical">Botanical</a>
-            <a href="#poster">Poster</a>
-            <a href="#contact">Contact Me</a>
+            <a href="#class" class="navbarButton">Class</a>
+            <a href="#principles" class="navbarButton">Principles</a>
+            <a href="#color" class="navbarButton">Color</a>
+            <a href="#gradient" class="navbarButton">Gradients</a>
+            <a href="#type" class="navbarButton">Type</a>
+            <a href="#collage" class="navbarButton">Collage</a>
+            <a href="#sollewitt" class="navbarButton">Sol Lewitt</a>
+            <a href="#botanical" class="navbarButton">Botanical</a>
+            <a href="#poster" class="navbarButton">Poster</a>
+            <a href="#contact" class="navbarButton">Contact Me</a>
         </div>
-        <div id="appearing">
+        <a id="appearing" href="#landing">
             Kevin's Portfolio
-        </div>
+        </a>
     </div>
     <div id="body">
         
@@ -306,8 +306,11 @@
         <h2 id="poster">
             Final Poster
         </h2>
+        <h3>
+            Call to Action Poster. 
+        </h3>
         <p>
-            Call to Action Poster
+            As the president of ski patrol and with low attendance in this past fall's outdoor emergency care class, I knew I wanted to make an advertisement for the class as my final poster. I took inspiration from the Ranger Naturalist Service posters from the early 1930s and 40s.
         </p>
         <div style="align-items:center; display: flex; justify-content: center;">
             <img src="./images/ewing-k_final_poster.jpg" style="width:50%; margin:auto; padding:2rem;">
