--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             
                 <div class="mySlides1 fade">
                 <div class="numbertext">2 / 6</div>
-                <img src="./images/ewing_k_Balance.jpg" style="width:100%">
+                <a href="http://www.cs.middlebury.edu/~kewing/digital_studio/animation/" target="_blank"><img src="./images/ewing_k_Balance.jpg" style="width:100%"></a>
                 <div class="text">Balance</div>
                 </div>
             
