--- a/animation/index.html
+++ b/animation/index.html
@@ -17,6 +17,7 @@
         height: 100%;
       }
     </style>
+    <link rel="stylesheet" href="../carousel.css">
   </head>
   <body>
     <div id="canvas-container"></div>
@@ -24,5 +25,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.17.1/matter.min.js"></script>
     <script src="./script.js"></script>
+
+    <div class="text", style="position:absolute; font-size: 24px;">
+        Balance
+    </div>
   </body>
 </html>
