--- a/animation/color.html
+++ b/animation/color.html
@@ -24,7 +24,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.17.1/matter.min.js"></script>
-    <script src="./script.js"></script>
+    <script src="./color.js"></script>
 
     <div class="text", style="position:absolute; font-size: 24px;">
         Balance
